# ROS-controller

./: .gitignore  Dockerfile  build.txt  buildPackage.sh  buildPackage.sh~  cam_test.txt  install_manual_control.sh  install_pubsub_pkg.sh  install_rc_in.sh  launch_file.yaml  mavros_param.yaml  mavros_param.yaml~  params.list  poolTest.sh  startsub.txt  testForward.sh  testForward.sh~  turn_your_brain_on.sh
install/: local_setup.sh  setup.sh
install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh  package.xml
install/manual_pubsub/lib/manual_pubsub/: listener  talker
install/manual_pubsub/share/manual_pubsub/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/manual_pubsub/share/manual_pubsub/cmake/: manual_pubsubConfig.cmake
install/publisher_subscriber/lib/publisher_subscriber/: publisher
install/publisher_subscriber/share/ament_index/resource_index/parent_prefix_path/: publisher_subscriber
install/publisher_subscriber/share/publisher_subscriber/: package.sh  package.xml
install/robosub/lib/robosub/: controller_node
install/robosub/share/robosub/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robosub/share/robosub/cmake/: robosubConfig.cmake
log/: latest_build
publisher_subscriber/: CMakeLists.txt  CMakeLists.txt~  package.xml
publisher_subscriber/src/: imu_data.cpp
publisher_subscriber/src/install/: local_setup.sh  setup.ps1  setup.sh
publisher_subscriber/src/log/: latest_build
src/cpp_pubsub/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/manual_pubsub/: CMakeLists.txt  package.xml
src/manual_pubsub/src/: #publisher_member_function.cpp#  .#publisher_member_function.cpp  publisher_member_function.cpp  subscriber_member_function.cpp
src/manual_pubsub/src/install/: local_setup.sh  setup.zsh
src/rc_in/: CMakeLists.txt  package.xml
src/rc_in/src/: publisher_member_function.cpp
src/rc_in/src/install/: setup.bash  setup.sh
src/rc_in/src/log/: latest_build
src/robosub/: CMakeLists.txt  package.xml
src/robosub/src/: controller_node.cpp
src/test/: CMakeLists.txt  package.xml
src/test/src/: man_test.txt  rc_test.txt  test_node.cpp
